SISRP-6923 - Check whether we would have a good UX when we link to a specific classic component for CS profile
https://jira.berkeley.edu/browse/SISRP-6923

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -15,7 +15,9 @@ linters:
     enabled: false
   SelectorFormat:
     class_convention: ^(uc\-|ps(_|-)|psc_|PSForm)[a-zA-Z0-9\-_]*$
-    exclude: 'src/css/cs/items/_mainheader.scss'
+    exclude:
+      - 'src/css/cs/items/_mainheader.scss'
+      - 'src/css/cs/items/_selfservice.scss'
   StringQuotes:
     enabled: false
   QualifyingElement:
